freshed-rs-macros/tests/ui/fail/intentional_fail.stderr
error: intentional trybuild compile_fail baseline
 --> tests/ui/fail/intentional_fail.rs:5:5
  |
5 |     compile_error!("intentional trybuild compile_fail baseline");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
